# ADS-1

./: .clang_complete  CMakeLists.txt  README.md  Test_lab.cc  bin  index.md  insertsort.cpp  mergesort.cpp  quicksort.cpp  sorting.hh  testbin_tree.cc  testsort.cc
Sorting/: bubble_sort.cc  bubblesort.cc  bubblesort.cpp  insert_sort.cc  insertsort.cc  insertsort.cpp  mergesort.cpp  quicksort.cpp  sorting.hh
Sorting/Printing/: stampa.cc
Tree/: bin_tree.cc  bin_tree.hh
